--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -7,12 +7,11 @@ layout: page
   <div class="col-md-8">
 
     {% include index/description.html %}
+    {% include feature/audio.html objectid="final_wahc_podcast" width="50" caption="The Evolution of the Workers Arts and Heritage Centre" %}
     {% include index/carousel.html title="Sample Items" height="300" %}
   
   </div>
   <div class="col-md-4">  
-
-    {% include index/time.html %}
 
     {% include index/featured-terms.html field="subject" title="Top Subjects" btn-color="primary" %}
 
